// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`My component renders the UI as expected 1`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3>
    title
  </h3>
  <p>
    content
  </p>
</div>
`;

exports[`My component renders the UI as expected 2`] = `
<div
  className="Card"
>
  <button
    type="button"
  >
    delete
  </button>
  <h3>
    Bigger Title
  </h3>
  <p>
    Better Content
  </p>
</div>
`;
